# resp_extract

./: README.md
respiration_extraction/: .gitignore  _tasks.py  pyproject.toml
respiration_extraction/experiments/playground/: Calibration.ipynb  EvaluationPlots.ipynb  MethodPlots.ipynb
respiration_extraction/respiration_extraction/: __init__.py  main_script.py
respiration_extraction/respiration_extraction/algorithms/: __init__.py
respiration_extraction/respiration_extraction/algorithms/ecg/: __init__.py
respiration_extraction/respiration_extraction/algorithms/ecg/estimation_rr/: __init__.py  base_estimation.py  estimation_frequency.py  estimation_time.py
respiration_extraction/respiration_extraction/algorithms/ecg/extraction/: extraction_feature.py  extraction_filtered.py  extraction_nk.py
respiration_extraction/respiration_extraction/algorithms/ecg/fusion_rr/: fusion.py
respiration_extraction/respiration_extraction/algorithms/imu/: __init__.py  estimation.py  extraction.py
respiration_extraction/respiration_extraction/datasets/: __init__.py  _bachelor_respiration_dataset_raw.py  _respiration_dataset_raw.py
respiration_extraction/respiration_extraction/pipelines/: pipelines.py
